PS-772 [FIX] Ensures Data Source wrapping text  correctly

--- a/css/interface.css
+++ b/css/interface.css
@@ -858,6 +858,7 @@ td.data-source-apps {
   max-height: none !important;
   padding: 4px !important;
   box-sizing: border-box !important;
+  text-overflow: ellipsis;
 }
 
 .handsontable td {
@@ -867,11 +868,12 @@ td.data-source-apps {
 .handsontable .cell-wrapper {
   min-height: 15px;
   line-height: 1.2;
-  white-space: pre-wrap;
-  word-break: break-word;
+  white-space: nowrap;
+  word-break: keep-all;
   height: 100%;
-  display: inline;
   align-items: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 /* Ensure header cells have proper height */
